# mvaa

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
appendix/: decomposition_appendix.ipynb  results.ipynb
monoliths/cargo/: HsqldbSchemaExtractRunner.java  alignment_results.pkl  bc.json  data.sql  decompositions_cargo.pkl  entity_to_tables.json  mapper_to_entity.json  mapper_to_tables.json  requirements_processed.txt  srl.json  vista_datos_cargo.graphml  vista_disenio_cargo.graphml  vista_implementacion_cargo.graphml  vista_implementacion_cargo_c.graphml
monoliths/daytrader/: alignment_results.pkl  bc.json  decompositions_daytrader.pkl  entity_to_tables.json  mapper_to_tables.json  requirements_processed.txt  srl.json  vista_datos_daytrader.graphml  vista_disenio_daytrader.graphml  vista_implementacion_daytrader.graphml  vista_implementacion_daytrader_c.graphml
monoliths/jpetstore/: alignment_results.pkl  bc.json  decompositions_jpetstore.pkl  entity_to_tables.json  mapper_to_entity.json  mapper_to_tables.json  requirements_processed.txt  srl.json  vista_datos_jpetstore.graphml  vista_disenio_jpetstore.graphml  vista_implementacion_jpetstore.graphml  vista_implementacion_jpetstore_c.graphml
mvaa/alignment/: alignment.py  data_access.py  embeddings.py  infrastructure_filter.py  structural.py
mvaa/bc_induction/: bc_induction.py  sensitivity_analysis.py
mvaa/metrics/: bounded_contexts.py  data_restriction.py
mvaa/tests/: reproduce_all.py
mvaa/utils/: decompositions.py  embeddings.py  graph.py  groq_client.py
results/RQ1/: decomposition_space.csv  discriminative_power.csv  metrics_cargo.csv  (+6 more)
(+1211 files in other folders)
