[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mvaa"
version = "0.1.0"
description = "Multi-View Architectural Analysis for evaluating microservice decompositions using bounded contexts and data access metrics"
requires-python = ">=3.13"
dependencies = [
    "spacy>=3.8.7,<4.0.0",
    "networkx (>=3.5,<4.0)",
    "python-louvain (>=0.16,<0.17)",
    "sentence-transformers (>=5.1.1,<6.0.0)",
    "transformers (>=4.57.0,<5.0.0)",
    "ipykernel>=6.30.1,<7.0.0",
    "nltk (>=3.9.2,<4.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "pyvis (>=0.3.2,<0.4.0)",
    "keybert (>=0.9.0,<0.10.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "hdbscan (>=0.8.40,<0.9.0)",
    "leidenalg (>=0.11.0,<0.12.0)",
    "igraph (>=1.0.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "llama-index (>=0.14.8,<0.15.0)",
    "llama-index-core (>=0.14.8,<0.15.0)",
    "llama-index-llms-groq (>=0.4.1,<0.5.0)",
    "llama-index-program-guidance (>=0.4.1,<0.5.0)",
    "llama-index-embeddings-huggingface (>=0.6.1,<0.7.0)",
    "groq>=1.0.0",
    "python-dotenv>=1.0.0",
    "javalang>=0.13.0",
    "scipy-stubs~=1.17.0",
    "pandas-stubs~=2.3.3",
    "statistics>=1.0.3.5",
    "en-core-web-sm",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
